Install bootstrap --auth in laravel

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,13 @@
 server {
+    server_name _; #catch all
     listen 80 default_server;
-    root /app/public
+    root /app/public/test/public;
 
     index index.php index.html index.htm;
+
+        location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
 
     location ~ \.php$ {
     fastcgi_pass php:9000;
